# FlappyChicken

./: .clangd  .gitignore  CMakeLists.txt  FlappyChicken.cpp  PlayerChick.cpp  PlayerChicken.h  build.bat
